--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /jackson-databind-2.6.6.tar.gz
 /jackson-databind-2.6.7.tar.gz
 /jackson-databind-2.7.6.tar.gz
+/jackson-databind-2.7.6-*.fc2*.src.rpm
